<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark">

    <include
        android:id="@+id/header_bar"
        layout="@layout/fragment_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_bar"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/currentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="false"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:text="@string/current_username"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textIsSelectable="true"/>
        <EditText
            android:id="@+id/editUsernameET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/currentName"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/edit_new_username"
            android:inputType="text"/>
        <TextView
            android:id="@+id/currentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editUsernameET"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/current_email"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textIsSelectable="true"/>

        <EditText
            android:id="@+id/editEmailET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/currentEmail"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/edit_new_email"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editEmailET"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/current_password"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textIsSelectable="true"/>
        <EditText
            android:id="@+id/editPasswordET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/currentPassword"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/edit_new_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editPasswordET"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:gravity="center"
            android:text="@string/press_to_edit" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editButton"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:gravity="center"
            android:text="@string/delete_account" />

    </RelativeLayout>
</RelativeLayout>